--- a/ports/libarchive/vcpkg-cmake-wrapper.cmake.in
+++ b/ports/libarchive/vcpkg-cmake-wrapper.cmake.in
@@ -31,12 +31,11 @@ if("@VCPKG_LIBRARY_LINKAGE@" STREQUAL "static")
     endif()
     if(@ENABLE_LZO@)
         include(SelectLibraryConfigurations)
-        find_library(LZO_LIBRARY_DEBUG NAMES lzo2d lzo2 NAMES_PER_DIR PATH_SUFFIXES lib PATHS "${_VCPKG_INSTALLED_DIR}/${VCPKG_TARGET_TRIPLET}/debug" NO_DEFAULT_PATH)
-        find_library(LZO_LIBRARY_RELEASE NAMES lzo2 NAMES_PER_DIR PATH_SUFFIXES lib PATHS "${_VCPKG_INSTALLED_DIR}/${VCPKG_TARGET_TRIPLET}" NO_DEFAULT_PATH)
-        select_library_configurations(LZO)
-        set(LZO_FOUND FALSE)
-        if(LZO_LIBRARY)
-            list(APPEND z_vcpkg_libarchive_libs ${LZO_LIBRARY})
+        find_library(Z_VCPKG_LZO_LIBRARY_DEBUG NAMES lzo2d lzo2 PATHS "${_VCPKG_INSTALLED_DIR}/${VCPKG_TARGET_TRIPLET}/debug/lib" NO_DEFAULT_PATH)
+        find_library(Z_VCPKG_LZO_LIBRARY_RELEASE NAMES lzo2 PATHS "${_VCPKG_INSTALLED_DIR}/${VCPKG_TARGET_TRIPLET}/lib" NO_DEFAULT_PATH)
+        select_library_configurations(Z_VCPKG_LZO)
+        if(Z_VCPKG_LZO_LIBRARY)
+            list(APPEND z_vcpkg_libarchive_libs ${Z_VCPKG_LZO_LIBRARY})
         else()
             set(LibArchive_FOUND FALSE)
         endif()
