--- a/ports/libarchive/vcpkg-cmake-wrapper.cmake.in
+++ b/ports/libarchive/vcpkg-cmake-wrapper.cmake.in
@@ -1,4 +1,5 @@
 cmake_policy(PUSH)
+cmake_policy(SET CMP0012 NEW)
 cmake_policy(SET CMP0057 NEW)
 set(z_vcpkg_libarchive_args "")
 if("REQUIRED" IN_LIST ARGS)
@@ -7,6 +8,7 @@ endif()
 if("QUIET" IN_LIST ARGS)
     list(APPEND z_vcpkg_libarchive_args "QUIET")
 endif()
+
 _find_package(${ARGS})
 
 if("@VCPKG_LIBRARY_LINKAGE@" STREQUAL "static")
