--- a/ports/tiff/vcpkg-cmake-wrapper.cmake.in
+++ b/ports/tiff/vcpkg-cmake-wrapper.cmake.in
@@ -1,7 +1,6 @@
 cmake_policy(PUSH)
 cmake_policy(SET CMP0012 NEW)
 cmake_policy(SET CMP0057 NEW)
-set(_tiff_find_args "${ARGS}")
 set(_tiff_link_libraries "")
 set(_tiff_libraries "")
 set(_tiff_incomplete FALSE)
@@ -9,6 +8,9 @@ set(_tiff_find_options "")
 if("REQUIRED" IN_LIST ARGS)
     list(APPEND _tiff_find_options "REQUIRED")
 endif()
+
+_find_package(${ARGS})
+
 if(@webp@)
     find_package(WebP CONFIG ${_tiff_find_options})
     if(WebP_FOUND)
@@ -67,7 +69,6 @@ endif()
 if(_tiff_incomplete)
     set(TIFF_FOUND FALSE)
 else()
-    _find_package(${_tiff_find_args})
     if(TARGET TIFF::TIFF)
         set_property(TARGET TIFF::TIFF APPEND PROPERTY INTERFACE_LINK_LIBRARIES ${_tiff_link_libraries})
     endif()
@@ -78,7 +79,6 @@ else()
         list(APPEND TIFF_LIBRARY ${_tiff_libraries})
     endif()
 endif()
-unset(_tiff_find_args)
 unset(_tiff_link_libraries)
 unset(_tiff_libraries)
 unset(_tiff_incomplete)
