Skip dependencies if not LibArchive_FOUND

--- a/ports/libarchive/vcpkg-cmake-wrapper.cmake.in
+++ b/ports/libarchive/vcpkg-cmake-wrapper.cmake.in
@@ -11,7 +11,7 @@ endif()
 
 _find_package(${ARGS})
 
-if("@VCPKG_LIBRARY_LINKAGE@" STREQUAL "static")
+if(LibArchive_FOUND AND "@VCPKG_LIBRARY_LINKAGE@" STREQUAL "static")
     set(z_vcpkg_libarchive_libs "")
     find_package(ZLIB ${z_vcpkg_libarchive_args})
     list(APPEND z_vcpkg_libarchive_libs ZLIB::ZLIB)
