--- a/ports/tiff/vcpkg-cmake-wrapper.cmake.in
+++ b/ports/tiff/vcpkg-cmake-wrapper.cmake.in
@@ -5,6 +5,9 @@ set(z_vcpkg_tiff_find_options "")
 if("REQUIRED" IN_LIST ARGS)
     list(APPEND z_vcpkg_tiff_find_options "REQUIRED")
 endif()
+if("QUIET" IN_LIST ARGS)
+    list(APPEND z_vcpkg_tiff_find_options "QUIET")
+endif()
 
 _find_package(${ARGS})
 
