Enable debug output for find_package

--- a/scripts/test_ports/cmake-user/project/CMakeLists.txt
+++ b/scripts/test_ports/cmake-user/project/CMakeLists.txt
@@ -46,7 +46,9 @@ install(TARGETS exe lib
 set(FIND_PACKAGES "" CACHE STRING "List of packages to be found and used")
 foreach(package ${FIND_PACKAGES})
     string(TOUPPER "${package}" package_upper)
+    set(CMAKE_FIND_DEBUG_MODE ON)
     find_package("${package}" QUIET)
+    set(CMAKE_FIND_DEBUG_MODE OFF)
     if(NOT ${package}_FOUND AND NOT ${package_upper}_FOUND)
         message(SEND_ERROR "find_package(${package}) check: failed")
     elseif(DEFINED ${package_upper}_LIBRARIES)
