[enet] Export config, support BUILD_SHARED_LIBS, and add usage

--- a/ports/enet/CMakeLists.txt
+++ b/ports/enet/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required(VERSION 2.6)
+cmake_minimum_required(VERSION 3.0.2)
 
 project(enet)
 
@@ -55,9 +55,7 @@ if(HAS_SOCKLEN_T)
     add_definitions(-DHAS_SOCKLEN_T=1)
 endif()
  
-include_directories(${PROJECT_SOURCE_DIR}/include)
- 
-add_library(enet STATIC
+add_library(enet
         callbacks.c
         compress.c
         host.c
@@ -69,13 +67,42 @@ add_library(enet STATIC
         win32.c
     )
 
+add_library(enet::enet ALIAS enet)
+
+target_include_directories(enet PUBLIC
+    $<BUILD_INTERFACE:${PROJECT_SOURCE_DIR}/include>
+    $<INSTALL_INTERFACE:include>
+)
+
+if (BUILD_SHARED_LIBS)
+    target_compile_definitions(enet
+        PUBLIC ENET_DLL
+        PRIVATE ENET_BUILDING_LIB
+    )
+endif()
+	
+
 if (WIN32)
     target_link_libraries(enet winmm ws2_32)
 endif()
 
-install(TARGETS enet ARCHIVE DESTINATION lib
+set(INSTALL_TARGETS enet)
+set(ENET_CMAKE_DIR ${CMAKE_INSTALL_LIBDIR}/cmake/enet)
+
+install(TARGETS enet EXPORT enetConfig
+                     ARCHIVE DESTINATION lib
                      LIBRARY DESTINATION lib
                      RUNTIME DESTINATION bin)
+
+export(TARGETS ${INSTALL_TARGETS}
+    NAMESPACE enet::
+    FILE "${CMAKE_CURRENT_BINARY_DIR}/enetConfig.cmake"
+)
+
+install(EXPORT
+    enetConfig DESTINATION ${ENET_CMAKE_DIR}
+    NAMESPACE enet::
+)
 
 install(DIRECTORY include/
         DESTINATION include)
