--- a/versions/s-/snappy.json
+++ b/versions/s-/snappy.json
@@ -1,6 +1,11 @@
 {
   "versions": [
     {
+      "git-tree": "b4dfc1c40ea2834c6aef017cc6403a43c9785595",
+      "version-string": "1.1.9",
+      "port-version": 0
+    },
+    {
       "git-tree": "c1afd7c780a1ca8befbc3fbde0262d073afeee35",
       "version-string": "1.1.8",
       "port-version": 1
