--- a/versions/s-/snappy.json
+++ b/versions/s-/snappy.json
@@ -1,8 +1,8 @@
 {
   "versions": [
     {
-      "git-tree": "b4dfc1c40ea2834c6aef017cc6403a43c9785595",
-      "version-string": "1.1.9",
+      "git-tree": "ca2180e16528c28e8afe86ce0d7cf0e8a053f273",
+      "version": "1.1.9",
       "port-version": 0
     },
     {
