--- a/ports/clue/CMakeLists.txt
+++ b/ports/clue/CMakeLists.txt
@@ -11,7 +11,7 @@ include_directories("${CMAKE_CURRENT_SOURCE_DIR}/include/clue.hpp")
 if(CLUE_BUILD_TEST)
     file(GLOB TEST_SOURCES "tests/*.cpp")
     add_executable(test_clue ${TEST_SOURCES})
-    target_include_directories(test_clue PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include ${CMAKE_CURRENT_SOURCE_DIR}/tests)
+    target_include_directories(test_clue PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/include" "${CMAKE_CURRENT_SOURCE_DIR}/tests")
     install(TARGETS test_clue
             RUNTIME DESTINATION tools)
 endif()
@@ -21,5 +21,5 @@ if(CLUE_BUILD_EXAMPLE)
     install(FILES ${EXAMPLES} DESTINATION examples)
 endif()
 
-install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/include/clue.hpp DESTINATION ${CMAKE_INSTALL_INCLUDEDIR})
+install(FILES "${CMAKE_CURRENT_SOURCE_DIR}/include/clue.hpp" DESTINATION "${CMAKE_INSTALL_INCLUDEDIR}")
 # end of file
