[ci] Don't emit warnings for absence of failure logs (#20316)
* No warning for absence of failure logs

* Update condition for osx and linux

Co-authored-by: Billy Robert O'Neal III <bion@microsoft.com>

--- a/scripts/azure-pipelines/windows/azure-pipelines.yml
+++ b/scripts/azure-pipelines/windows/azure-pipelines.yml
@@ -115,7 +115,7 @@ jobs:
     inputs:
       PathtoPublish: '$(Build.ArtifactStagingDirectory)\failure-logs'
       ArtifactName: 'failure logs for ${{ parameters.triplet }}'
-    condition: always()
+    condition: ne(variables['FAILURE_LOGS_EMPTY'], 'True')
   - task: PowerShell@2
     displayName: 'Build a file list for all packages'
     condition: always()
