--- a/versions/v-/vcpkg-cmake-config.json
+++ b/versions/v-/vcpkg-cmake-config.json
@@ -1,6 +1,11 @@
 {
   "versions": [
     {
+      "git-tree": "6ef57ed7342c118f3be50c56a2233384c433591d",
+      "version-date": "2021-09-29",
+      "port-version": 0
+    },
+    {
       "git-tree": "9ae99981abcd01b092344f85ef6e1de3c1f9856a",
       "version-date": "2021-09-27",
       "port-version": 0
