[boost-modular-build-helper] fix empty flags

--- a/ports/boost-modular-build-helper/CMakeLists.txt
+++ b/ports/boost-modular-build-helper/CMakeLists.txt
@@ -113,9 +113,12 @@ if(APPLE)
     endforeach()
 endif()
 
+string(REGEX REPLACE "[ \t\r\n]+" " " CXXFLAGS "${CXXFLAGS}")
 string(STRIP "${CXXFLAGS}" CXXFLAGS)
-string(STRIP "${CFLAGS}"   CFLAGS)
-string(STRIP "${LDFLAGS}"  LDFLAGS)
+string(REGEX REPLACE "[ \t\r\n]+" " " CFLAGS "${CFLAGS}")
+string(STRIP "${CFLAGS}" CFLAGS)
+string(REGEX REPLACE "[ \t\r\n]+" " " LDFLAGS "${LDFLAGS}")
+string(STRIP "${LDFLAGS}" LDFLAGS)
 
 if(NOT CXXFLAGS STREQUAL "")
     string(REPLACE " " " <cxxflags>" CXXFLAGS "<cxxflags>${CXXFLAGS}")
