--- a/versions/v-/vcpkg-pkgconfig-get-modules.json
+++ b/versions/v-/vcpkg-pkgconfig-get-modules.json
@@ -1,6 +1,11 @@
 {
   "versions": [
     {
+      "git-tree": "e34705e29ded3234cf8c21d7802c02a855a01ecb",
+      "version-date": "2021-10-05",
+      "port-version": 0
+    },
+    {
       "git-tree": "558512de1cc52fd9e246d6e7b99575418dd8500f",
       "version-date": "2021-04-02",
       "port-version": 1
