--- a/ports/nativefiledialog/CMakeLists.txt
+++ b/ports/nativefiledialog/CMakeLists.txt
@@ -15,7 +15,7 @@ file(GLOB nfd_sources
 if (WIN32)
     enable_language(CXX)
     list(APPEND nfd_sources "${PROJECT_SOURCE_DIR}/src/nfd_win.cpp")
-elseif (${CMAKE_SYSTEM_NAME} MATCHES "Linux")
+elseif (CMAKE_SYSTEM_NAME MATCHES "Linux")
     if (NFD_GTK_BACKEND)
         find_package(GTK3 QUIET)
         if (GTK3_FOUND)
@@ -26,8 +26,11 @@ elseif (${CMAKE_SYSTEM_NAME} MATCHES "Linux")
     else ()
         list(APPEND nfd_sources "${PROJECT_SOURCE_DIR}/src/nfd_zenity.c")
     endif ()
-elseif (${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
+elseif (CMAKE_SYSTEM_NAME MATCHES "Darwin")
     list(APPEND nfd_sources "${PROJECT_SOURCE_DIR}/src/nfd_cocoa.m")
+    find_package(unofficial-nativefiledialog CONFIG REQUIRED)
+    find_library(CORE_FOUNDATION_LIBRARY CoreFoundation ONLY)
+    find_library(APPKIT_LIBRARY AppKit ONLY)
 endif ()
 
 add_library(nfd ${nfd_sources})
@@ -36,7 +39,7 @@ set_target_properties(
     nfd
     PROPERTIES
         DEBUG_POSTFIX "_d"
-        PUBLIC_HEADER ${CMAKE_CURRENT_LIST_DIR}/src/include/nfd.h
+        PUBLIC_HEADER "${CMAKE_CURRENT_LIST_DIR}/src/include/nfd.h"
 )
 
 target_compile_definitions(
@@ -47,16 +50,18 @@ target_compile_definitions(
 
 target_include_directories(nfd PRIVATE
         $<BUILD_INTERFACE:
-			${CMAKE_CURRENT_LIST_DIR}/src 
-			${CMAKE_CURRENT_LIST_DIR}/src/include
+			"${CMAKE_CURRENT_LIST_DIR}/src"
+			"${CMAKE_CURRENT_LIST_DIR}/src/include"
 		>)
-		
-target_include_directories(nfd INTERFACE 
-		$<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}>)
+
+target_include_directories(nfd INTERFACE
+		"$<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}>")
 
 if (GTK3_FOUND)
-    target_include_directories(nfd PUBLIC ${GTK3_INCLUDE_DIRS})
-    target_link_libraries(nfd PUBLIC ${GTK3_LIBRARIES})
+    target_include_directories(nfd PUBLIC "${GTK3_INCLUDE_DIRS}")
+    target_link_libraries(nfd PUBLIC "${GTK3_LIBRARIES}")
+elseif (${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
+    target_link_libraries(nfd PRIVATE "${CORE_FOUNDATION_LIBRARY}" "${APPKIT_LIBRARY}")
 endif ()
 
 install(TARGETS nfd EXPORT unofficial-nativefiledialog-config)
