Shorten validation lines

--- a/ports/vcpkg-cmake-validate/project/CMakeLists.txt
+++ b/ports/vcpkg-cmake-validate/project/CMakeLists.txt
@@ -233,16 +233,20 @@ list(REMOVE_DUPLICATES libs_expanded)
 foreach(item IN LISTS libs_expanded)
     set(prefix "${CURRENT_PACKAGES_DIR}/")
     string(FIND "${item}" "${prefix}" prefix_found)
-    if(prefix_found LESS 0)
+    if(prefix_found EQUAL "0")
+        string(REPLACE "${prefix}" "<package>/" item "${item}")
+    else()
         set(prefix "${VCPKG_INSTALLED_DIR}/${VCPKG_TARGET_TRIPLET}/")
         string(FIND "${item}" "${prefix}" prefix_found)
+        if(prefix_found EQUAL "0")
+            string(REPLACE "${prefix}" "<installed>/" item "${item}")
+        else()
+            message(STATUS "  other: ${item}")
+            continue()
+        endif()
     endif()
-    if(NOT prefix_found EQUAL 0)
-        message(STATUS "  other: ${item}")
-        continue()
-    endif()
-    string(FIND "${item}" "${prefix}lib/" release_found)
-    string(FIND "${item}" "${prefix}debug/lib/" debug_found)
+    string(FIND "${item}" ">/lib/" release_found)
+    string(FIND "${item}" ">/debug/lib/" debug_found)
     if(CMAKE_BUILD_TYPE STREQUAL "Release" AND debug_found EQUAL 0)
         message(SEND_ERROR "Validation failed: Debug lib in release build: ${item}")
     elseif(CMAKE_BUILD_TYPE STREQUAL "Debug" AND release_found EQUAL 0)
